--- a/course-02/exercises/udacity-c2-restapi/.gitignore
+++ b/course-02/exercises/udacity-c2-restapi/.gitignore
@@ -36,6 +36,8 @@ Thumbs.db
 UserInterfaceState.xcuserstate
 node_modules
 venv/
+.env
+*.pem
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
